# banking_analytics_pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/raw/: accounts.csv  customers.csv
notebooks/: 01_initial_data_exploration.ipynb  02_advanced_sql_analysis.ipynb  03_data_cleaning_preparation.ipynb  04_feature_engineering.ipynb
sql/: create_tables.sql  data_ingestion_check.sql
src/database/: db_connection.py
src/ingestion/: generate_sample_data.py  load_data_to_db.py
